--- a/package.json
+++ b/package.json
@@ -1,10 +1,18 @@
 {
+  "name": "test-proj",
+  "module": "./bundle.mjs",
+  "main": "./bundle.js",
   "scripts": {
-    "start": "snowpack dev",
+    "dev": "snowpack dev",
     "build": "snowpack build",
     "test": "echo \"This template does not include a test runner by default.\" && exit 1"
   },
   "devDependencies": {
-    "snowpack": "^2.17.1"
+    "@snowpack/plugin-svelte": "^3.3.1",
+    "snowpack": "^2.17.1",
+    "svelte": "^3.31.0"
+  },
+  "dependencies": {
+    "simple-svelte-autocomplete": "^1.2.4"
   }
 }
